--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: min(max(5vw, 1rem), 22px);
+}
+
+:root {
+   --font-color : rgba(0, 0, 0, 0.650);
+   --font-dark-color : rgba(0, 0, 0, 0.507);
+   --primary-color : #00dbd0;
+   --primary-dark-color : #02cec4;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +22,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  white-space: nowrap;
 }
 
 code {
